the first version of all the hws
the first version of all the hws

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,23 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.PNG
+*.emf
+*.exe
+*.dll
+*.html
+*.zip
+*.docx
+*.csv
+*.dat
+*.pdf
+*.xlsx
+hw8/outarima
+*.xls
+hw8/outarima1
+hw8/outarima4
+hw8/outarima2
+hw8/outarima5
+hw8/outarima6
+hw8/outarima8
+hw8/outarima7
